tools/data-handler/test/test-data/valid/decision-records/cardRoot/decision_5/index.adoc
= Decision Records

To create a new decision, click this button:

{{{ createCards '{"template": "decision/templates/simplepage", "buttonLabel": "Create a new page"}'}}}

== Decisions

The following decisions have been made:

{{{ report '{"name": "decision/reports/testReport", "key3": "key"}'}}}