tools/data-handler/test/test-data/invalid/invalid-card-has-wrong-state/cardroot/decision_5/index.adoc
= Decision Records

To create a new decision, click this button:

cards:create_from_template[decision]

== Decisions

The following decisions have been made:

cards::list_cards[query TBD]